--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,6 +6,16 @@ body {
   margin: 0%;
 }
 
+#legendsCorp {
+  border-radius: 30%;
+  display: block;
+  margin: 0px auto;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  box-shadow: 0px 15px 20px rgb(46, 102, 167);
+  max-width: 60%;
+}
+
 .text-center {
   text-align: center;
 }
