--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -24,10 +24,48 @@ a:link {
   text-align: center;
 }
 
+.italic {
+  font-style: italic;
+  font-size: smaller;
+}
+
+.italicGrey {
+  font-style: italic;
+  font-size: small;
+  color: grey;
+}
+
 .smallImg {
   width: 10%;
   height: 10%;
 }
+
+/* FOOTER */
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #274479;
+  color: #fff;
+  text-align: center;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  padding-top: 20px;
+  position: static;
+}
+
+#teleportation {
+  max-width: 6%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  border-radius: 50%;
+  border: 2px solid #fefefe;
+}
+
+/* END FOOTER */
 
 /* NAVBAR */
 
@@ -92,30 +130,6 @@ li:hover {
 
 /* END NAVBAR */
 
-/* FOOTER */
-
-/* footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: #274479;
-  color: #fff;
-  text-align: center;
-  bottom: 0;
-  width: 100%;
-  position: absolute;
-  padding-top: 50px;
-}
-
-#teleportation {
-  max-width: 6%;
-  margin-bottom: 1%;
-  border-radius: 50%;
-  border: 2px solid #fefefe;
-} */
-
-/* END FOOTER */
-
 /* SUBSCRIBE PAGE */
 
 input[type="text"],
@@ -135,6 +149,16 @@ input[type="password"]:focus,
 input[type="email"]:focus {
   background-color: #ddd;
   outline: none;
+}
+
+.subjectPost {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+  box-shadow: 0px 2px 2px #999;
 }
 
 .registerbtn,
@@ -230,7 +254,7 @@ input[type="email"]:focus {
 .imgCategory {
   width: 5%;
   height: 5%;
-  border: black solid 1px;
+  border: white solid 1px;
   border-radius: 25px;
 }
 
