--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -35,6 +35,16 @@ a:link {
   color: grey;
 }
 
+.divider {
+  margin-top: 50px;
+  border: 0;
+  height: 1px;
+  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+}
+
 .smallImg {
   width: 10%;
   height: 10%;
@@ -350,6 +360,10 @@ input[type="email"]:focus {
   background-color: #e0eef7;
   color: black;
   padding: 15px;
+}
+
+.alinea {
+  margin-left: 100px;
 }
 
 /* END LIST POST PAGE */
