--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,6 +10,27 @@ a:link {
   text-decoration: none;
 }
 
+#messageOfPost {
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#profilePic {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+#pseudo {
+  font-size: 20px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  margin-left: 40px;
+}
+
 #legendsCorp {
   border-radius: 30%;
   display: block;
@@ -365,5 +386,6 @@ input[type="email"]:focus {
 .alinea {
   margin-left: 100px;
 }
+
 
 /* END LIST POST PAGE */
