--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -21,11 +21,29 @@ a:link {
   margin-bottom: 5%;
 }
 
+.valideInscription,
+.erreurConnexion,
+.existEmail,
+.errorPSW {
+  display: flex;
+  justify-content: center;
+  color: white;
+  margin: 15px 0px;
+}
+
+.error {
+  background-color: rgba(249, 37, 37, 0.63);
+}
+
+.success {
+  background-color: rgba(5, 197, 5, 0.67);
+}
+
 #messageOfPost {
   text-align: center;
   margin-left: 20px;
   margin-right: 20px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 #profilePic {
@@ -38,7 +56,7 @@ a:link {
 
 #pseudo {
   font-size: 20px;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   margin-left: 40px;
 }
 
@@ -402,7 +420,7 @@ input[type="email"]:focus {
   margin-left: 100px;
 }
 
-*{
+* {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -410,9 +428,9 @@ input[type="email"]:focus {
 
 /* Table Styles */
 
-.table-wrapper{
+.table-wrapper {
   margin: 10px 70px 70px;
-  box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+  box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
 }
 
 .fl-table {
@@ -427,7 +445,8 @@ input[type="email"]:focus {
   background-color: white;
 }
 
-.fl-table td, .fl-table th {
+.fl-table td,
+.fl-table th {
   text-align: center;
   padding: 8px;
 }
@@ -442,79 +461,81 @@ input[type="email"]:focus {
   background: orange;
 }
 
-
 .fl-table thead th:nth-child(odd) {
   color: #ffffff;
   background: rgb(46, 102, 167);
 }
 
 .fl-table tr:nth-child(even) {
-  background: #F8F8F8;
+  background: #f8f8f8;
 }
 
 /* Responsive */
 
 @media (max-width: 767px) {
   .fl-table {
-      display: block;
-      width: 100%;
+    display: block;
+    width: 100%;
   }
-  .table-wrapper:before{
-      content: "Scroll horizontally >";
-      display: block;
-      text-align: right;
-      font-size: 11px;
-      color: white;
-      padding: 0 0 10px;
+  .table-wrapper:before {
+    content: "Scroll horizontally >";
+    display: block;
+    text-align: right;
+    font-size: 11px;
+    color: white;
+    padding: 0 0 10px;
   }
-  .fl-table thead, .fl-table tbody, .fl-table thead th {
-      display: block;
+  .fl-table thead,
+  .fl-table tbody,
+  .fl-table thead th {
+    display: block;
   }
-  .fl-table thead th:last-child{
-      border-bottom: none;
+  .fl-table thead th:last-child {
+    border-bottom: none;
   }
   .fl-table thead {
-      float: left;
+    float: left;
   }
   .fl-table tbody {
-      width: auto;
-      position: relative;
-      overflow-x: auto;
+    width: auto;
+    position: relative;
+    overflow-x: auto;
   }
-  .fl-table td, .fl-table th {
-      padding: 20px .625em .625em .625em;
-      height: 60px;
-      vertical-align: middle;
-      box-sizing: border-box;
-      overflow-x: hidden;
-      overflow-y: auto;
-      width: 120px;
-      font-size: 13px;
-      text-overflow: ellipsis;
+  .fl-table td,
+  .fl-table th {
+    padding: 20px 0.625em 0.625em 0.625em;
+    height: 60px;
+    vertical-align: middle;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 120px;
+    font-size: 13px;
+    text-overflow: ellipsis;
   }
   .fl-table thead th {
-      text-align: left;
-      border-bottom: 1px solid #f7f7f9;
+    text-align: left;
+    border-bottom: 1px solid #f7f7f9;
   }
   .fl-table tbody tr {
-      display: table-cell;
+    display: table-cell;
   }
   .fl-table tbody tr:nth-child(odd) {
-      background: none;
+    background: none;
   }
   .fl-table tr:nth-child(even) {
-      background: transparent;
+    background: transparent;
   }
   .fl-table tr td:nth-child(odd) {
-      background: #F8F8F8;
-      border-right: 1px solid #E6E4E4;
+    background: #f8f8f8;
+    border-right: 1px solid #e6e4e4;
   }
   .fl-table tr td:nth-child(even) {
-      border-right: 1px solid #E6E4E4;
+    border-right: 1px solid #e6e4e4;
   }
   .fl-table tbody td {
-      display: block;
-      text-align: center;
+    display: block;
+    text-align: center;
   }
 }
 
